<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="@dimen/size10">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/size10">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/size5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size5"
                    android:text="@string/financial_year"
                    android:textColor="@color/txt_secondary" />

                <Spinner
                    android:id="@+id/sp_finantial_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/txt_third" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size5"
                    android:text="@string/animal_cat"
                    android:textColor="@color/txt_secondary" />

                <Spinner
                    android:id="@+id/sp_animal_cate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/txt_third" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size5"
                    android:text="@string/animal_breed_cat"
                    android:textColor="@color/txt_secondary" />

                <Spinner
                    android:id="@+id/sp_breed_cate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/txt_third" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size5"
                    android:text="@string/animal_breed_blood_cat"
                    android:textColor="@color/txt_secondary" />

                <Spinner
                    android:id="@+id/sp_breed_blood_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/txt_third" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size10"
                android:textColorHint="@color/txt_secondary">

                <EditText
                    android:id="@+id/et_bull_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/straw_demand"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/txt_primary"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size5"
                android:textColorHint="@color/txt_secondary">

                <EditText
                    android:id="@+id/et_bull_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/opening_balance"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="70"
                    android:singleLine="true"
                    android:textColor="@color/txt_primary"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_marginTop="@dimen/size10"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="SAVE" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>