<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:padding="@dimen/size10"
        android:text="Farmer Profile"
        android:visibility="gone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/size15" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:padding="@dimen/size10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size5"
                android:text="@string/animal_cat"
                android:textColor="@color/txt_secondary" />

            <Spinner
                android:id="@+id/sp_animal_cate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/txt_third" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size5"
                android:text="@string/animal_breed_cat"
                android:textColor="@color/txt_secondary" />

            <Spinner
                android:id="@+id/sp_breed_cate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/txt_third" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size5"
                android:text="@string/animal_breed_blood_cat"
                android:textColor="@color/txt_secondary" />

            <Spinner
                android:id="@+id/sp_breed_blood_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/txt_third" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/size10"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_noOfAnimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/animal_ear_tag_no"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="4"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/size10"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/milk_yield_animal"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="30"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/size10"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/milk_yield_dam"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size3"
                android:layout_marginBottom="@dimen/size10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sign_up"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingRight="@dimen/size10"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="horizontal"
                android:visibility="gone"
                android:padding="@dimen/size3"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_already_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="bottom|left"
                    android:padding="@dimen/size5"
                    android:text="@string/already_account"
                    android:textColor="@color/txt_blue"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
