<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:padding="@dimen/size10">

            <ImageView
                android:id="@+id/welcome_tv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:padding="@dimen/size5"
                android:src="@mipmap/ic_launcher" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="qwertyuioplkjhgfdsazxcvbnm@.1234567890QWERTYUIOPLKJHGFDSAZXCVBNM"
                    android:hint="@string/enter_name"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="qwertyuioplkjhgfdsazxcvbnm@.1234567890QWERTYUIOPLKJHGFDSAZXCVBNM"
                    android:hint="@string/address"
                    android:paddingBottom="10dp"
                    android:singleLine="false"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/distric"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_taluka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="qwertyuioplkjhgfdsazxcvbnm@.1234567890QWERTYUIOPLKJHGFDSAZXCVBNM"
                    android:hint="@string/taluka"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="qwertyuioplkjhgfdsazxcvbnm@.1234567890QWERTYUIOPLKJHGFDSAZXCVBNM"
                    android:hint="@string/village"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile_no"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adhar_no"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="qwertyuioplkjhgfdsazxcvbnm@,#$%.1234567890QWERTYUIOPLKJHGFDSAZXCVBNM"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/size15" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size3"
                android:layout_marginBottom="@dimen/size10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sign_up"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingRight="@dimen/size10"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="horizontal"
                android:padding="@dimen/size3"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_already_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="bottom|left"
                    android:padding="@dimen/size5"
                    android:text="@string/already_account"
                    android:textColor="@color/txt_blue"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
