<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size10"
        android:background="@drawable/shadow"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcome_tv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:padding="@dimen/size5"
            android:src="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="qwertyuioplkjhgfdsazxcvbnm@.1234567890QWERTYUIOPLKJHGFDSAZXCVBNM"
                android:hint="@string/user_id"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="@dimen/size15" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="qwertyuioplkjhgfdsazxcvbnm@,#$%.1234567890QWERTYUIOPLKJHGFDSAZXCVBNM"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="@dimen/size15" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size3"
            android:layout_marginBottom="@dimen/size10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingRight="@dimen/size10"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/size5"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size20"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="bottom|left"
                android:padding="@dimen/size5"
                android:text="@string/create_account"
                android:textColor="@color/txt_blue"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="bottom|left"
                android:padding="@dimen/size5"
                android:text="@string/forgot_password"
                android:textColor="@color/txt_blue"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
